--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         run: 
             python -m unittest discover -s tests -p '*Tests.py' -v      
 
-      - name: Tests Sucess Message  
+      - name: Tests Sucess Message.  
         run: echo All tests passed
         
       - name: Verify HTML
